[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund simulation using multiple specialized agents"
authors = ["virattt"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-groq = "^0.2.0"
langgraph = "^0.2.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
requests = "^2.32.0"
python-dotenv = "^1.0.0"
tabulate = "^0.9.0"
colorama = "^0.4.6"
yfinance = "^0.2.40"
questionary = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.poetry.scripts]
hedge-fund = "src.main:main"
backtest = "src.backtester:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Removed --cov flags so a plain `pytest` run doesn't require pytest-cov installed
# Added -s to show print() output during test runs, useful for debugging agent logic
# Added -x to stop on first failure -- speeds up feedback loop during local development
addopts = "-v -s -x"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
